git-svn-id: https://svn.ittig.cnr.it/svn/metaPlanning@17 25260841-6fff-4626-8fa1-665b712acaa3

--- a/VisualProvisionManager/trunk/.project
+++ b/VisualProvisionManager/trunk/.project
@@ -3,6 +3,7 @@
 	<name>VisualProvisionManager</name>
 	<comment></comment>
 	<projects>
+		<project>ProvisionModel</project>
 	</projects>
 	<buildSpec>
 	</buildSpec>
